After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764226 - autotools plugin:g_get_user_special_dir() result unchecked
autotools plugin:g_get_user_special_dir() result unchecked
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: plugins
3.20.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-26 08:06 UTC by Jürg Billeter
Modified: 2016-03-26 08:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (1.16 KB, patch)
2016-03-26 08:06 UTC, Jürg Billeter
committed Details | Review

Description Jürg Billeter 2016-03-26 08:06:19 UTC
Created attachment 324783 [details] [review]
Proposed patch

Result of g_get_user_special_dir() is not checked in the autotools plugin, leading to tons of critical warnings if one or multiple XDG directories have not been configured. See attached patch.

CRITICAL: g_file_new_for_path: assertion 'path != NULL' failed