autotools: check result of g_get_user_special_dir()

This fixes the following critical warning:

CRITICAL: g_file_new_for_path: assertion 'path != NULL' failed

https://bugzilla.gnome.org/show_bug.cgi?id=764226